Made attack compensation work for shorter entities as well